imported paths to all sub-files and made array for individual elements

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,52 +1,52 @@
 // Color Variable
-$primary: #2277ef !default;
-$secondary: #6102dd !default;
-$bg: #101820ff !default;
-$dark-bg: rgb(10, 16, 22) !default;
-$success: #36b37e !default;
-$danger: #ff5630 !default;
-$warning: #ffab00 !default;
-$info: #00b8d9 !default;
-$light: #fbfbfb !default;
-$dark: #4a4a4a !default;
+$primary: #2277ef !important !default;
+$secondary: #6102dd !important !default;
+$bg: #101820ff !important !default;
+$dark-bg: rgb(10, 16, 22) !important !default;
+$success: #36b37e !important !default;
+$danger: #ff5630 !important !default;
+$warning: #ffab00 !important !default;
+$info: #00b8d9 !important !default;
+$light: #fbfbfb !important !default;
+$dark: #4a4a4a !important !default;
 
 // ----------------------
-$dark: #464a53;
-$light: #aaa;
-$border: #dee2e6;
-$inverse: #2f3d4a;
-$ceriseRed: #f54372;
-$light-2: #f9fafc;
-$scooter: #36b9d8;
-$carnation: #f6514c;
-$apple: #449036;
-$cardinal: #ce2b23;
-$royal-blue: #3375e1;
+$dark: #464a53 !important;
+$light: #aaa !important;
+$border: #dee2e6 !important;
+$inverse: #2f3d4a !important;
+$ceriseRed: #f54372 !important;
+$light-2: #f9fafc !important;
+$scooter: #36b9d8 !important;
+$carnation: #f6514c !important;
+$apple: #449036 !important;
+$cardinal: #ce2b23 !important;
+$royal-blue: #3375e1 !important;
 
 ///////////////
 // Solid Color
 ///////////////
-$white: #fff;
-$black: #000;
-$charade: #23252f;
-$muted: #8898aa;
-$l-muted: #c2cbd4;
+$white: #fff !important;
+$black: #000 !important;
+$charade: #23252f !important;
+$muted: #8898aa !important;
+$l-muted: #c2cbd4 !important;
 
 /////////////
 // Social
 /////////////
-$facebook: rgb(59, 89, 152);
-$twitter: #1da1f2;
-$youtube: #ff0000;
-$google-plus: #db4439;
-$linkedin: #007bb6;
-$instagram: #c32aa3;
-$pinterest: #bd081c;
-$google: #4285f4;
-$reddit: #ff4500;
-$spotify: #1ed760;
-$skype: #00aff0;
-$quora: #aa2200;
+$facebook: rgb(59, 89, 152) !important;
+$twitter: #1da1f2 !important;
+$youtube: #ff0000 !important;
+$google-plus: #db4439 !important;
+$linkedin: #007bb6 !important;
+$instagram: #c32aa3 !important;
+$pinterest: #bd081c !important;
+$google: #4285f4 !important;
+$reddit: #ff4500 !important;
+$spotify: #1ed760 !important;
+$skype: #00aff0 !important;
+$quora: #aa2200 !important;
 
 ///////////////////
 // Material Color
