--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,6 +1,7 @@
 * {
-  box-sizing: border-box;
-  margin: 1rem;
-  padding: 0;
+  box-sizing: border-box !important;
+  margin: 0rem !important;
+  padding: 0 !important;
   text-decoration: none !important;
+  list-style: none !important;
 }
