--- a/src/main.css
+++ b/src/main.css
@@ -9,8 +9,13 @@
   Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Component
   */
 * {
-  box-sizing: border-box;
-  margin: 1rem;
-  padding: 0;
+  box-sizing: border-box !important;
+  margin: 0rem !important;
+  padding: 0 !important;
   text-decoration: none !important;
+  list-style: none !important;
+}
+
+body {
+  background: red;
 }
