just simple design changes | colors

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Color Variable
-$primary: #2277ef !important !default;
+$primary: #1e76ff !important !default;
 $secondary: #6102dd !important !default;
-$bg: #101820ff !important !default;
+$bg: #04142e !important !default;
 $dark-bg: rgb(10, 16, 22) !important !default;
 $success: #36b37e !important !default;
 $danger: #ff5630 !important !default;
