--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Color Variable
 $primary: #1e76ff !important !default;
 $secondary: #6102dd !important !default;
-$bg: #04142e !important !default;
+$bg: #00112c !important !default;
 $dark-bg: rgb(10, 16, 22) !important !default;
 $success: #36b37e !important !default;
 $danger: #ff5630 !important !default;
@@ -95,9 +95,9 @@ $cyan: #00bcd4;
 $picton-blue: #44daf4;
 $light-blue: #5c97e6;
 $curious-blue: #3885d8;
-$sky: #2290ff;
+$sky: #0080ff !important;
 $indigo: #3f51b5;
-$blue-dark: #4501eb;
+$blue-dark: #5b19ff !important;
 $shark: #24282d;
 $navy: #102d4b;
 $big-stone: #152037;
@@ -111,7 +111,7 @@ $cadet-blue: #adb6c7;
 $pale-sky: #6a707e;
 $gallery: #eeeeee;
 $gray: #898989;
-$hawkes-blue: #d2ebfc;
+$hawkes-blue: #d2ebfc !important;
 $grey: #d2d6de;
 $blue-grey: #607d8b;
 $silver: #cccccc;
