imported new scss file

--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -6,3 +6,4 @@
 @import "./Header/header";
 @import "./Modal/modal";
 @import "./Navigation/navigation";
+@import "./Card/card-tips-tricks/card-layout2";
