--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -3,9 +3,28 @@
 body {
   .card {
     background: $google;
-    button {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 5px 10px,
+      rgba(0, 0, 0, 0.3) 0px 10px 13px -4px,
+      rgba(0, 0, 0, 0.2) 0px -7px 1px inset;
+    border: none;
+
+    opacity: 0;
+    animation: drop-down 1s ease-in-out forwards;
+
+    img {
+      box-shadow: 0px 1px 1px 0px #00112c, 1px 1px 1px 0px #00112c,
+        1px 1px 5px 0px #00112c, 1px 1px 10px 0px #00112c;
+      image-rendering: smooth;
+    }
+    .btn {
       background-color: $bg;
+      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
       border: none;
+      transition: all 0.3s;
+      &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+      }
     }
   }
 }
