--- a/src/components/Navigation/_navigation.scss
+++ b/src/components/Navigation/_navigation.scss
@@ -2,33 +2,51 @@
 
 body {
   background-color: $bg;
-  nav {
-    height: 6rem;
+  .navbar {
+    height: 4rem;
+    // background: $google !important;
     .brand_link {
       background-color: none;
-      border: 1px solid $white;
-      color: $white;
+      border: 1px solid $bg;
+      color: $bg;
+      font-weight: 500;
+      span {
+        font-size: 0.7rem;
+        border: 1px solid $bg;
+        color: $bg;
+      }
     }
     .navbar_links {
       display: flex;
       justify-content: space-evenly;
       a {
-        color: $white;
+        color: $bg;
         transition: all 0.3s;
         &:hover {
-          color: $google;
+          color: $bg;
+        }
+        &:after {
+          display: block;
+          content: "";
+          border-bottom: solid 3px $bg;
+          transform: scaleX(0);
+          transition: transform 0.2s ease-in-out;
+          border-radius: 1rem;
+        }
+        &:hover:after {
+          transform: scaleX(1);
         }
       }
     }
     #signin {
       background-color: transparent;
-      color: $white;
-      border: 1px solid $white;
+      color: $bg;
+      border: 1px solid $bg;
       transition: all 0.3s;
       &:hover {
-        background-color: $google;
+        background-color: $bg;
         color: $white;
-        border: 1px solid $google;
+        border: 1px solid $bg;
       }
     }
     #signin {
