only imports, basic styles etc...

--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -7,3 +7,4 @@
 @import "./Modal/modal";
 @import "./Navigation/navigation";
 @import "./Card/card-tips-tricks/card-layout2";
+@import "./Card/card-contact/card-layout3";
