--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Color Variable
 $primary: #1e76ff !important !default;
 $secondary: #6102dd !important !default;
-$bg: #00112c !important !default;
+$bg: #161a1d !important !default;
 $dark-bg: rgb(10, 16, 22) !important !default;
 $success: #36b37e !important !default;
 $danger: #ff5630 !important !default;
@@ -42,7 +42,8 @@ $google-plus: #db4439 !important;
 $linkedin: #007bb6 !important;
 $instagram: #c32aa3 !important;
 $pinterest: #bd081c !important;
-$google: #4285f4 !important;
+$google: #4361ee !important;
+$google2: #4362ee70 !important;
 $reddit: #ff4500 !important;
 $spotify: #1ed760 !important;
 $skype: #00aff0 !important;
