--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -2,42 +2,59 @@
 
 body {
   .home-hero {
-    .main-banner,
-    .secondary-banner {
-      opacity: 0;
-      animation: drop-down 1s ease-in-out forwards;
-
-      .image-hidden {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 20rem;
-        height: 20rem;
+    .row {
+      .main-banner,
+      .secondary-banner {
         opacity: 0;
-        transition: opacity 0.3s ease-in-out;
-      }
+        animation: drop-down 1s ease-in-out forwards;
 
-      .image-visible {
-        opacity: 1;
-        width: 20rem;
-        height: 20rem;
+        .image-hidden {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 20rem;
+          height: 20rem;
+          opacity: 0;
+          transition: opacity 0.3s ease-in-out;
+        }
+
+        .image-visible {
+          opacity: 1;
+          width: 20rem;
+          height: 20rem;
+        }
+      }
+      h1 {
+        font-size: clamp(0.3em, 2.4em, 2.4em);
+        // font-size: calc(35px + 0.390625vw);
+      }
+      span {
+        color: $google;
+        border: 1px solid $google;
+        @include border-radius(0.3rem);
+      }
+      .btn {
+        @include main-btn;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        @include border(3px, $google);
       }
     }
+  }
+}
+
+@media screen and (max-width: 1430px) {
+  .main-banner {
     h1 {
-      font-size: clamp(0.8rem, 2.9rem, 3rem);
+      font-size: 2rem !important;
     }
-    span {
-      color: $google;
-      border: 1px solid $google;
-      @include border-radius(0.3rem);
+    h4 {
+      font-size: 1rem !important;
     }
     .btn {
-      background-color: $google;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      border: 3px solid $google;
+      font-size: 0.7em;
     }
   }
 }
