--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -10,8 +10,6 @@
 }
 
 body {
-  padding: 0 8rem !important;
-  // height: 100vh !important;
-  // nav {
-  // }
+  padding: 0 10rem !important;
+  background-color: $bg;
 }
