renamed FILES + a lit a bit changes in code

--- a/src/pages/_pages.scss
+++ b/src/pages/_pages.scss
@@ -1,9 +1,9 @@
 @import "./about/about";
 @import "./home/home";
+@import "./404Page/404page";
 @import "./library/package";
 @import "./profile/profile";
 @import "./settings/settings";
 @import "./sing-in/sing-in";
 @import "./sing-up/sing-up";
 @import "./support/support";
-@import "./contact/contact";
