updated | MIXINS, VARIABLES...

--- a/src/components/_components.scss
+++ b/src/components/_components.scss
@@ -3,8 +3,6 @@
 @import "./Card/card";
 @import "./Footer/footer";
 @import "./Form/form";
-@import "./Header/header";
 @import "./Modal/modal";
 @import "./Navigation/navigation";
-@import "./Card/card-tips-tricks/card-layout2";
-@import "./Card/card-contact/card-layout3";
+@import "./Form/form";
