--- a/src/main.css
+++ b/src/main.css
@@ -19,25 +19,41 @@
   }
 }
 body .card {
-  background: #4361ee !important;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 5px 10px, rgba(0, 0, 0, 0.3) 0px 10px 13px -4px, rgba(0, 0, 0, 0.2) 0px -7px 1px inset;
-  border: none;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 5px 10px, rgba(0, 0, 0, 0.3) 0px 10px 13px -4px, rgba(0, 0, 0, 0.2) 0px -10px 1px inset;
+  border: 1px solid #4361ee !important;
+  height: 90%;
+  background: #171c27 !important;
   opacity: 0;
   animation: drop-down 1s ease-in-out forwards;
 }
 body .card img {
-  box-shadow: 0px 1px 1px 0px #00112c, 1px 1px 1px 0px #00112c, 1px 1px 5px 0px #00112c, 1px 1px 10px 0px #00112c;
-  image-rendering: smooth;
+  box-shadow: 0px 1px 1px 0px #182044, 1px 1px 1px 0px #182044, 1px 1px 5px 0px #182044, 1px 1px 10px 0px #182044;
 }
-body .card .btn {
-  background-color: #161a1d !important;
+body .card .card-body .container a .btn {
+  background-color: #4361ee !important;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   border: none;
   transition: all 0.3s;
 }
-body .card .btn:hover {
+body .card .card-body .container a .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+body .tips-card .l2-header {
+  color: #4361ee !important;
+}
+body .tips-card .card-body a .btn {
+  background-color: #4361ee !important;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  border: none;
+  transition: all 0.3s;
+}
+body .tips-card .card-body a .btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+body .tips-card .footer_card_tips {
+  color: #4361ee !important;
 }
 
 /*
@@ -60,22 +76,25 @@ body .card .btn:hover {
     transform: translateY(0%);
   }
 }
-body {
-  background-color: #161a1d !important;
-}
 body .navbar {
   height: 4rem;
 }
 body .navbar .brand_link {
-  background-color: none;
   border: 1px solid #161a1d !important;
   color: #161a1d !important;
   font-weight: 500;
+  gap: 0.3rem;
+  display: flex;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 body .navbar .brand_link span {
   font-size: 0.7rem;
   border: 1px solid #161a1d !important;
   color: #161a1d !important;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 body .navbar .navbar_links {
   display: flex;
@@ -85,13 +104,10 @@ body .navbar .navbar_links a {
   color: #161a1d !important;
   transition: all 0.3s;
 }
-body .navbar .navbar_links a:hover {
-  color: #161a1d !important;
-}
 body .navbar .navbar_links a:after {
   display: block;
   content: "";
-  border-bottom: solid 3px #161a1d !important;
+  border-bottom: 3px solid #161a1d !important;
   transform: scaleX(0);
   transition: transform 0.2s ease-in-out;
   border-radius: 1rem;
@@ -114,49 +130,13 @@ body .navbar #signin {
   font-size: 1.1rem;
 }
 
-/*
-  0 - 600: Phone
-  600 - 900: Tablet portrait
-  900 - 1200: Tablet landscape
-  1200 - 1800: Normal styles
-  1800+ : Big Desktop
-  1em = 16px
-  The smaller device rules always should write below the bigger device rules
-  Fixing Order => Base + Typography >> General Layout + Grid >> Page Layout + Component
-  */
-@keyframes drop-down {
-  0% {
-    opacity: 0;
-    transform: translateY(-5%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-}
-body .tips-card {
-  background: #161a1d !important;
-  border: 2px solid #4361ee !important;
-}
-body .l2-header {
-  color: #4361ee !important;
-  background-color: #161a1d !important;
-}
-body .btn_tips {
-  background-color: #4361ee !important;
-}
-body .footer_card_tips {
-  background-color: transparent;
-  color: #4361ee !important;
-}
-
-body .home-hero .main-banner,
-body .home-hero .secondary-banner {
+body .home-hero .row .main-banner,
+body .home-hero .row .secondary-banner {
   opacity: 0;
   animation: drop-down 1s ease-in-out forwards;
 }
-body .home-hero .main-banner .image-hidden,
-body .home-hero .secondary-banner .image-hidden {
+body .home-hero .row .main-banner .image-hidden,
+body .home-hero .row .secondary-banner .image-hidden {
   position: absolute;
   top: 0;
   left: 0;
@@ -165,37 +145,94 @@ body .home-hero .secondary-banner .image-hidden {
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
-body .home-hero .main-banner .image-visible,
-body .home-hero .secondary-banner .image-visible {
+body .home-hero .row .main-banner .image-visible,
+body .home-hero .row .secondary-banner .image-visible {
   opacity: 1;
   width: 20rem;
   height: 20rem;
 }
-body .home-hero h1 {
-  font-size: 2.9rem;
+body .home-hero .row h1 {
+  font-size: 2.4em;
 }
-body .home-hero span {
+body .home-hero .row span {
   color: #4361ee !important;
   border: 1px solid #4361ee !important;
   border-radius: 0.3rem;
 }
-body .home-hero .btn {
+body .home-hero .row .btn {
   background-color: #4361ee !important;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  border: none;
+  transition: all 0.3s;
 }
-body .home-hero img {
+body .home-hero .row img {
   max-width: 100%;
   height: auto;
   border: 3px solid #4361ee !important;
 }
 
-body .tips-tricks-card .card-title {
-  color: #161a1d !important !important;
+@media screen and (max-width: 1430px) {
+  .main-banner h1 {
+    font-size: 2rem !important;
+  }
+  .main-banner h4 {
+    font-size: 1rem !important;
+  }
+  .main-banner .btn {
+    font-size: 0.7em;
+  }
+}
+.container-fluid {
+  height: 70vh;
+  display: grid;
+  place-items: center;
+}
+.container-fluid .error_h1 {
+  font-size: 17rem;
+  color: #4361ee !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation-name: spin, depth;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: 2s;
+}
+.container-fluid .error_h1 span {
+  font-size: 10rem;
+  color: #4361ee !important;
+}
+.container-fluid .error_h1 h3 {
+  color: #4361ee !important;
+  border: 1px solid #4361ee !important;
 }
 
-body img {
-  height: 100%;
+@keyframes spin {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(-360deg);
+  }
 }
-
+@keyframes depth {
+  0% {
+    text-shadow: 0 0 black;
+  }
+  25% {
+    text-shadow: 1px 0 black, 2px 0 black, 3px 0 black, 4px 0 black, 5px 0 black;
+  }
+  50% {
+    text-shadow: 0 0 black;
+  }
+  75% {
+    text-shadow: -1px 0 black, -2px 0 black, -3px 0 black, -4px 0 black, -5px 0 black;
+  }
+  100% {
+    text-shadow: 0 0 black;
+  }
+}
 /*
   0 - 600: Phone
   600 - 900: Tablet portrait
@@ -246,7 +283,8 @@ body img {
 }
 
 body {
-  padding: 0 8rem !important;
+  padding: 0 10rem !important;
+  background-color: #161a1d !important;
 }
 
 body {
