--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // Color Variable
 $primary: #1e76ff !important !default;
-$secondary: #6102dd !important !default;
+$secondary: #171c27 !important !default;
 $bg: #161a1d !important !default;
 $dark-bg: rgb(10, 16, 22) !important !default;
 $success: #36b37e !important !default;
