useless variables deleted

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,27 +1,10 @@
-// Color Variable
+// Color Variables
 $primary: #1e76ff !important !default;
 $secondary: #171c27 !important !default;
 $bg: #161a1d !important !default;
 $dark-bg: rgb(10, 16, 22) !important !default;
-$success: #36b37e !important !default;
-$danger: #ff5630 !important !default;
-$warning: #ffab00 !important !default;
-$info: #00b8d9 !important !default;
 $light: #fbfbfb !important !default;
 $dark: #4a4a4a !important !default;
-
-// ----------------------
-$dark: #464a53 !important;
-$light: #aaa !important;
-$border: #dee2e6 !important;
-$inverse: #2f3d4a !important;
-$ceriseRed: #f54372 !important;
-$light-2: #f9fafc !important;
-$scooter: #36b9d8 !important;
-$carnation: #f6514c !important;
-$apple: #449036 !important;
-$cardinal: #ce2b23 !important;
-$royal-blue: #3375e1 !important;
 
 ///////////////
 // Solid Color
@@ -38,82 +21,8 @@ $l-muted: #c2cbd4 !important;
 $facebook: rgb(59, 89, 152) !important;
 $twitter: #1da1f2 !important;
 $youtube: #ff0000 !important;
-$google-plus: #db4439 !important;
 $linkedin: #007bb6 !important;
-$instagram: #c32aa3 !important;
-$pinterest: #bd081c !important;
 $google: #4361ee !important;
 $google2: #4362ee70 !important;
 $reddit: #ff4500 !important;
 $spotify: #1ed760 !important;
-$skype: #00aff0 !important;
-$quora: #aa2200 !important;
-
-///////////////////
-// Material Color
-///////////////////
-///
-// RED / PURPLE / PINK
-$maroon: #8c1919;
-$monza: #de0903;
-$red: #ff0000;
-$valencia: #d53845;
-$violetRed: #f13c79;
-$pink: #e91e63;
-$deep-pink: #fe60ad;
-$deep-purple: #664ce1;
-$fuchsia-blue: #835dc4;
-$purple: #7c277d;
-$seance: #752da1;
-$kimberly: #73629b;
-$purple-pizzazz: #dd04cc;
-$razzmatazz: #f31e7a;
-$cosmos: #ffdcdc;
-///
-// YELLOW / ORANGE
-$brown: #653818;
-$flamingo: #fa4c12;
-$cinnabar: #e74431;
-$orange: #f7941d;
-$yellow: #ffff00;
-$sunshine: #ffbe26;
-$candlelight: #fad00b;
-///
-// GREEN / BLUE
-$green: #008000;
-$malachite: #24cf48;
-$emerlad: #3ccf48;
-$chelesa-cucumber: #6dae4e;
-$lime: #cddc39;
-$light-green: #43e794;
-$turquoise: #46eead;
-$gossip: #d0fabb;
-$cloud: #aae8ff;
-$teal: #39cccc;
-$scooter: #36b8d7;
-$pelorous: #3aa6b4;
-$cyan: #00bcd4;
-$picton-blue: #44daf4;
-$light-blue: #5c97e6;
-$curious-blue: #3885d8;
-$sky: #0080ff !important;
-$indigo: #3f51b5;
-$blue-dark: #5b19ff !important;
-$shark: #24282d;
-$navy: #102d4b;
-$big-stone: #152037;
-$mirage: #121929;
-///
-// GREY / WHITE
-$athensGray: #f0f0f2;
-$alabaster: #fbfbfb;
-$dusty-gray: #999999;
-$cadet-blue: #adb6c7;
-$pale-sky: #6a707e;
-$gallery: #eeeeee;
-$gray: #898989;
-$hawkes-blue: #d2ebfc !important;
-$grey: #d2d6de;
-$blue-grey: #607d8b;
-$silver: #cccccc;
-$emperor: #555555;
