--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -2,6 +2,21 @@
 
 body {
   .home-hero {
+    .slider-thumb::before {
+        position: absolute;
+        content: "";
+        left: 25%;
+        top: 45%;
+        width: 450px;
+        height: 450px;
+        background-image: linear-gradient(45deg, #4361ee 25%, transparent 25%, transparent 50%, #4361ee 50%, #6679cf 75%, transparent 75%, transparent);
+        border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
+        will-change: border-radius, transform, opacity;
+        animation: sliderShape 5s linear infinite;
+        display: block;
+        z-index: -1;
+        -webkit-animation: sliderShape 5s linear infinite;
+      }
     .row {
       .main-banner,
       .secondary-banner {
@@ -35,6 +50,9 @@ body {
       }
       .btn {
         @include main-btn;
+        &:hover {
+          @include main-btn-hover;
+        }
       }
       img {
         max-width: 100%;
@@ -56,5 +74,28 @@ body {
     .btn {
       font-size: 0.7em;
     }
+  }
+}
+
+@keyframes sliderShape {
+
+  0%,
+  100% {
+    border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
+    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
+  }
+
+  34% {
+    border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
+    transform: translate3d(0, 5px, 0) rotateZ(0.01deg);
+  }
+
+  50% {
+    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
+  }
+
+  67% {
+    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
+    transform: translate3d(0, -3px, 0) rotateZ(0.01deg);
   }
 }
