--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Color Variables
 $primary: #1e76ff !important !default;
 $secondary: #171c27 !important !default;
-$bg: #161a1d !important !default;
+$bg: #e6ddc4 !important !default;
 $dark-bg: rgb(10, 16, 22) !important !default;
 $light: #fbfbfb !important !default;
 $dark: #4a4a4a !important !default;
